force-app/main/default/objects/Chat_Conversation__c/Chat_Conversation__c.object-meta.xml
<CustomObject>
    <description
  >One row per chat conversation. Source of truth for finalized chat history.</description>
    <label>Chat Conversation</label>
    <nameField>
        <displayFormat>CONV-{0000000}</displayFormat>
        <label>Conversation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Conversations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>