force-app/main/default/objects/Chat_Conversation__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description
  >Conversation identifier from the external chat backend.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>