force-app/main/default/objects/Chat_Conversation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>Salesforce user who owns this conversation.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Chat Conversations</relationshipLabel>
    <relationshipName>Chat_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>